# For-Smart-Hospital

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  index.html  package.json  pyproject.toml  requirements.txt
api/: index.py  main.py
apps/api/: Dockerfile  package.json  tsconfig.json
apps/api/prisma/: schema.prisma  seed.ts
apps/api/src/: app.ts  server.ts
apps/api/src/config/: env.ts  socket.ts
apps/api/src/middleware/: auth.ts  errorHandler.ts  validate.ts
apps/api/src/modules/auth/: auth.routes.ts
apps/api/src/modules/beds/: bed.routes.ts
apps/api/src/modules/departments/: department.routes.ts
apps/api/src/modules/notifications/: notification.routes.ts
apps/api/src/modules/patients/: patient.routes.ts
apps/api/src/modules/staff/: staff.routes.ts
apps/api/src/modules/tasks/: task.routes.ts
apps/web/: Dockerfile  next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: layout.tsx
apps/web/app/beds/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/departments/: page.tsx
apps/web/app/patients/: page.tsx
apps/web/app/staff/: page.tsx
apps/web/app/tasks/: page.tsx
apps/web/components/: Header.tsx  Sidebar.tsx
apps/web/components/ui/: Card.tsx  StatusBadge.tsx
apps/web/lib/: api.ts
